test/good/while.lat
int main() {
    int i = 0;
    while (i < 5) {
        printInt(i);
        i++;
    }
    printInt(i);
}
