test/bad/not.lat
int main() {
    int n;
    !n;
}
